--- a/midder-part.css
+++ b/midder-part.css
@@ -1,5 +1,5 @@
 #midder-part{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 660px;
     display: flex;
     background-color:#ff5d35;
