--- a/header.css
+++ b/header.css
@@ -3,6 +3,10 @@
     padding: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body{
+  background-color: rgba(246, 248, 248, 0.549);
+  color: rgba(5, 5, 48, 0.758);
+}
 #header{
     /* border: 1px solid red; */
     height: 50px;
