--- a/midder-part2.css
+++ b/midder-part2.css
@@ -1,5 +1,5 @@
 #midder-part2{
-    height: 350px;
+    height: 310px;
     /* border:1px solid red; */
 }
 #midder-part2>h1{
@@ -57,15 +57,223 @@
 }
 #midder-part-A{
     display: grid;
-   grid-template-columns: repeat(3,1fr);
-   grid-template-rows: repeat(2,1fr);
-    height: 500px;
-    width: 70%;
-    gap: 30px;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,1fr);
+    height: 1090px;
+    width: 55%;
+   gap: 20px;
     margin: auto;
     /* border: 1px solid red; */
 }
 #midder-part-A>div{
-    border: 1px solid red;
-    height: 500px;
+    /* border: 1px solid gray; */
+    height: 530px;
+    background-color: white;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
 }
+#midder-part-A>div:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+#midder-part-A>div>h6{
+    font-size: 23px;
+    margin-top: 10%;
+    line-height: 50px;
+    /* border: 1px solid red; */
+    text-align: center;
+    color: rgba(65, 64, 64, 0.759);
+
+}
+#midder-part-A>div>p:nth-child(2){
+    font-size: 14px;
+    width: 90%;
+    margin: auto;
+    color: rgba(56, 56, 56, 0.993);
+    margin-top: 17px;
+    margin-left: 29px;
+}
+#midder-part-A>div>hr{
+    width: 87%;
+    margin: auto;
+    border-color: rgba(243, 243, 243, 0.372);
+}
+#midder-part-A>div>p:nth-child(9){
+   margin-left: 30px;
+    line-height: 50px;
+    
+}
+#midder-part-A>div>ul{
+    margin-left: 50px;
+    line-height:30px;
+    /* border: 1px solid blue; */
+}
+
+#midder-part-A>div>p:nth-child(11){
+    display: flex;
+    justify-content: center;
+}
+#midder-part-A>div>p>button{
+   height: 40px;
+   width: 80%;
+   margin-top: 8%;
+   background-color:#ff5d35;
+   border: hidden;
+   color:white;
+   font-weight: 600;
+   font-size: 16px;
+   border-radius: 5px;
+}
+#midder-part-A>div>p>button:hover{
+    background-color: rgba(255, 99, 71, 0.699);
+    cursor: pointer;
+}
+
+#midder-part-A>div>h6>.iconify{
+    color: #ff5d35;
+    margin-right: 15px;
+    font-size: 35px;
+}
+#midder-part-A>div>ul>li>.iconify{
+    color: #ff5d35;
+    margin-right:12px ;
+}
+.new-feature{
+   border: 1px solid;
+   width: 34%;
+   margin-left: 67%;
+   margin-top: 15px;
+    border-radius: 12px 4px 4px 12px;
+   background-color: rgb(3, 197, 190);
+   color: white;
+}
+.new-feature>p{
+    margin-left: 10%;
+    font-size: 10px;
+    font-weight: 600;
+}
+#midder-part-A>div:nth-child(4)>p{
+    /* border: 1px solid red; */
+    font-size: 16px;
+    width: 90%;
+    line-height: 19px;
+    margin: auto;
+    color: rgba(56, 56, 56, 0.993);
+    margin-top: 17px;
+    margin-left: 29px;
+
+}
+#midder-part-A>div:nth-child(4)>h6{
+    margin-top: 6px;
+}
+#midder-part-A>div:nth-child(4)>ul{
+    line-height: 10px;
+    margin-top: 12px;
+}
+#midder-part-A>div:nth-child(4)>ul>li{
+    line-height: 26px;
+}
+/* MIDDER PART B START */
+#midder-part-b{
+    border: 1px solid white;
+    margin-top: 4%;
+    height: 889px;
+    background: linear-gradient(60deg, #04a7afda 20%, rgba(25, 185, 159, 0.743) 90%);
+}
+#midder-part-b>h1{
+    color: white;
+    width: 38%;
+    text-align: center;
+    margin: auto;
+    margin-top: 7%;
+}
+#midder-part-b>p{
+    width: 32%;
+    text-align: center;
+    margin: auto;
+    line-height: 25px;
+    margin-top: 1%;
+    color: white;
+}
+.midder-part-b-grid{
+    /* border: 1px solid red; */
+    margin: auto;
+    display: grid;
+    width: 50%;
+    height: 380px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(2,1fr);;
+}
+.midder-part-b-grid>div:nth-child(1){
+    border-right: 1px solid white;
+}
+.midder-part-b-grid>div:nth-child(2){
+    border-right: 1px solid white;
+}
+.midder-part-b-grid>div:nth-child(3){
+    border-right: 1px solid white;
+}
+
+.midder-part-b-grid>div:nth-child(5){
+    border-right: 1px solid white;
+    border-top: 1px solid white;
+
+}
+.midder-part-b-grid>div:nth-child(6){
+    border-right: 1px solid white;
+    border-top: 1px solid white;
+
+}
+.midder-part-b-grid>div:nth-child(7){
+    border-right: 1px solid white;
+    border-top: 1px solid white;
+
+}
+.midder-part-b-grid>div:nth-child(8){
+    border-top: 1px solid white;
+
+}
+.midder-part-b-grid>div:nth-child(1)>img{
+    margin-left: 40%;
+    margin-top:10%;
+}
+.midder-part-b-grid>div:nth-child(2)>img{
+    margin-left: 35%;
+    margin-top:10%;
+}
+.midder-part-b-grid>div:nth-child(3)>img{
+    margin-left: 25%;
+    margin-top:10%;
+}
+.midder-part-b-grid>div:nth-child(4)>img{
+    margin-left: 30%;
+    margin-top:10%;
+}
+.midder-part-b-grid>div:nth-child(5)>img{
+    width: 60%;
+    margin-top:8%;
+    margin-left: 20%;
+}
+.midder-part-b-grid>div:nth-child(6)>img{
+    margin-left: 44%;
+    margin-top:10%;
+}
+.midder-part-b-grid>div:nth-child(7)>img{
+    margin-left: 40%;
+    margin-top:10%;
+}
+.midder-part-b-grid>div:nth-child(8)>img{
+    margin-left: 40%;
+    margin-top:10%;
+    width: 18%;
+}
+.midder-part-b-grid>div>h1{
+    text-align: center;
+    margin-top: 12px;
+    color: white;
+}
+.midder-part-b-grid>div>p{
+    text-align: center;
+    margin-top: 12px;
+    color: white;
+}
+
